python/testData/inspections/PyUnresolvedReferencesInspection/augAssignmentDefinedInOuterScope.py
x = 1
def f():
    <error descr="Unresolved reference 'x'">x</error> += 1
